[gd_scene load_steps=21 format=2]

[ext_resource path="res://Assets/Characters/logo-icon.png" type="Texture" id=1]
[ext_resource path="res://Assets/UI/wooden btn 3- hver.png" type="Texture" id=2]
[ext_resource path="res://Scenes/Characters/character1.gd" type="Script" id=3]
[ext_resource path="res://Assets/UI/AdobeStock_254419949.jpeg" type="Texture" id=4]
[ext_resource path="res://Assets/UI/einstein.png" type="Texture" id=5]
[ext_resource path="res://Assets/UI/wooden btn 3.png" type="Texture" id=6]
[ext_resource path="res://Assets/Font/fonts/Pangolin/Pangolin-Regular.ttf" type="DynamicFontData" id=7]

[sub_resource type="DynamicFont" id=1]
size = 60
font_data = ExtResource( 7 )

[sub_resource type="DynamicFont" id=2]
size = 30
font_data = ExtResource( 7 )

[sub_resource type="DynamicFont" id=3]
size = 30
font_data = ExtResource( 7 )

[sub_resource type="DynamicFont" id=4]
size = 30
font_data = ExtResource( 7 )

[sub_resource type="StyleBoxTexture" id=5]
texture = ExtResource( 2 )
region_rect = Rect2( 0, 0, 1144, 430 )

[sub_resource type="StyleBoxTexture" id=6]
texture = ExtResource( 2 )
region_rect = Rect2( 0, 0, 1144, 430 )

[sub_resource type="StyleBoxTexture" id=7]
texture = ExtResource( 6 )
region_rect = Rect2( 0, 0, 1144, 430 )

[sub_resource type="DynamicFont" id=8]
size = 35
font_data = ExtResource( 7 )

[sub_resource type="StyleBoxTexture" id=9]
texture = ExtResource( 2 )
region_rect = Rect2( 0, 0, 1144, 430 )

[sub_resource type="StyleBoxTexture" id=10]
texture = ExtResource( 2 )
region_rect = Rect2( 0, 0, 1144, 430 )

[sub_resource type="StyleBoxTexture" id=11]
texture = ExtResource( 6 )
region_rect = Rect2( 0, 0, 1144, 430 )

[sub_resource type="DynamicFont" id=12]
size = 35
font_data = ExtResource( 7 )

[sub_resource type="DynamicFont" id=13]
size = 30
font_data = ExtResource( 7 )

[node name="character1-details" type="Node"]
script = ExtResource( 3 )

[node name="AdobeStock_254419949" type="Sprite" parent="."]
position = Vector2( 959.791, 540.801 )
scale = Vector2( 0.382714, 0.359386 )
texture = ExtResource( 4 )

[node name="pagetitle2" type="VBoxContainer" parent="."]
visible = false
margin_left = 38.0
margin_top = 16.0
margin_right = 989.0
margin_bottom = 128.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="logo" type="TextureRect" parent="pagetitle2"]
visible = false
margin_right = 951.0
margin_bottom = 86.0
texture = ExtResource( 1 )
stretch_mode = 4

[node name="Label" type="Label" parent="pagetitle2"]
visible = false
margin_right = 951.0
margin_bottom = 14.0
text = "Character"
align = 1
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="HBoxContainer" type="HBoxContainer" parent="."]
margin_left = 246.071
margin_top = 163.986
margin_right = 456.071
margin_bottom = 407.986
__meta__ = {
"_edit_use_anchors_": false
}

[node name="CanvasLayer" type="CanvasLayer" parent="HBoxContainer"]

[node name="character image" type="Sprite" parent="HBoxContainer/CanvasLayer"]
position = Vector2( 419.268, 468.343 )
scale = Vector2( 1.50748, 1.50748 )
texture = ExtResource( 5 )

[node name="VBoxContainer" type="VBoxContainer" parent="."]
margin_left = 580.0
margin_top = 300.0
margin_right = 1635.0
margin_bottom = 672.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="character name" type="Label" parent="VBoxContainer"]
margin_right = 1055.0
margin_bottom = 76.0
custom_fonts/font = SubResource( 1 )
text = "Albert Einstein"

[node name="tagline" type="Label" parent="VBoxContainer"]
margin_top = 80.0
margin_right = 1055.0
margin_bottom = 119.0
custom_fonts/font = SubResource( 2 )
text = "German-American Physicist"

[node name="about" type="Label" parent="VBoxContainer"]
margin_top = 123.0
margin_right = 1055.0
margin_bottom = 372.0
custom_fonts/font = SubResource( 3 )
text = "- Born on March 14, 1879, in Wurttemberg, Germany
- One of the most influential physicists of the 20th century
- Won 1921 Nobel Prize for Physics for his photoelectric effect explanation
- Found flaws in Newton’s theory on velocity, the law of motions
- Formulated principle of relativity: “Speed of light is constant in any inertial frame.”
"
valign = 1

[node name="reference" type="LinkButton" parent="."]
margin_left = 680.0
margin_top = 854.874
margin_right = 1535.0
margin_bottom = 893.874
custom_fonts/font = SubResource( 4 )
text = "Read More at https://www.britannica.com/biography/Albert-Einstein"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="select" type="Button" parent="."]
margin_left = 614.106
margin_top = 698.334
margin_right = 774.106
margin_bottom = 788.334
custom_styles/hover = SubResource( 5 )
custom_styles/pressed = SubResource( 6 )
custom_styles/normal = SubResource( 7 )
custom_fonts/font = SubResource( 8 )
text = "Select"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="back" type="Button" parent="."]
margin_left = 1126.89
margin_top = 703.0
margin_right = 1286.89
margin_bottom = 793.0
custom_styles/hover = SubResource( 9 )
custom_styles/pressed = SubResource( 10 )
custom_styles/normal = SubResource( 11 )
custom_fonts/font = SubResource( 12 )
text = "Back"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="HttpPost" type="HTTPRequest" parent="."]

[node name="ErrorNotification" type="Label" parent="."]
margin_left = 718.553
margin_top = 923.443
margin_right = 1205.55
margin_bottom = 962.443
custom_fonts/font = SubResource( 13 )
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}
[connection signal="pressed" from="reference" to="." method="_on_reference_pressed"]
[connection signal="pressed" from="select" to="." method="_on_select_pressed"]
[connection signal="pressed" from="back" to="." method="_on_back_pressed"]
[connection signal="request_completed" from="HttpPost" to="." method="_on_HttpPost_request_completed"]
